--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.2.16",
+    "@types/chalk": "^2.2.0",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.41",
+    "@types/yargs": "^16.0.1",
     "chai": "^4.3.4",
+    "chalk": "^4.1.1",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
     "typedoc": "^0.20.35",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "yargs": "^16.2.0"
   }
 }
